Updated UserMapper, PaymentRepository, RoleRepository, UserRepository and UserServiceImpl classes